Header fixed on small screens

--- a/frontend/public/assets/css/styles.css
+++ b/frontend/public/assets/css/styles.css
@@ -123,7 +123,7 @@ nav h3{
 nav a{
 	font: bold 30px 'Open Sans', sans-serif;
 	float: none;
-	margin: 4px;
+	margin: 8px;
 }
   
 .menu {
@@ -170,6 +170,10 @@ nav a{
 	.icon {
 	  display: block;
 	}
+
+	.menu a{
+		margin: 0px;
+	}
   
 	.menu ul {
 	  flex-direction: column;
@@ -185,6 +189,7 @@ nav a{
   
 	.menu li {
 	  text-align: center;
+	  background-color: rgb(0, 0, 0);
 	  margin: 0;
 	}
   
